<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_live"
        android:icon="@drawable/ic_nav_live"
        android:title="@string/nav_live" />
    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/ic_nav_series"
        android:title="@string/nav_series" />
    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/ic_nav_movies"
        android:title="@string/nav_movies" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
